--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -30,7 +30,7 @@ architectures/x86_64=false
 version/code=1
 version/name=""
 package/unique_name="com.example.tesbuild"
-package/name=""
+package/name="BGG"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
