--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,8 +5,7 @@ platform="Android"
 runnable=true
 dedicated_server=false
 custom_features=""
-export_filter="exclude"
-export_files=PackedStringArray("res://loader.tscn")
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="./Base-game.apk"
